--- a/client/src/App.css
+++ b/client/src/App.css
@@ -155,4 +155,26 @@
     font-size: 16px; /* Increase font size for larger buttons */
 }
 
+.profile-summary {
+	display: flex;
+	width: 100%;
+	height: 5em;
+}
+
+.profile {
+	flex: 1;
+	border: 1px solid black;
+	justify-content: space-evenly;
+	align-items: flex-start;
+}
+
+.profile.stub {
+	flex: 1;
+	border-right: none;
+}
+
+.profile.extension {
+	flex: 2;
+}
+
 
