--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,8 +40,15 @@
   
 .page {
 	padding: 30px;
+	display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  flex-direction: column;
 }
-  
+.page h1 {
+	text-align: center;
+}
 .page h2 {
 	text-align: center;
 }
@@ -158,7 +165,11 @@
 .profile-summary {
 	display: flex;
 	width: 100%;
-	height: 5em;
+	height: auto;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	margin-top: 20px;
+  	border: 1px solid #ccc;
+
 }
 
 .profile {
@@ -176,5 +187,12 @@
 .profile.extension {
 	flex: 2;
 }
+.profile.Data{
+	width: 100%;
+	height: auto;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	margin-top: 20px;
+  	border: 1px solid #ccc;
 
+}
 
