--- a/client/src/App.css
+++ b/client/src/App.css
@@ -187,12 +187,20 @@
 .profile.extension {
 	flex: 2;
 }
-.profile.Data{
+.profile-section{
 	width: 100%;
 	height: auto;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	margin-top: 20px;
   	border: 1px solid #ccc;
 
+}
+.profile-section.editing {
+  /* Styles for editable state */
+  	width: 100%;
+	height: auto;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	margin-top: 20px;
+  	border: 1px solid #ccc;
 }
 
