--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,12 +39,17 @@
 }
   
 .page {
-	padding: 30px;
+	/* padding: 30px; */
 	display: flex;
-  justify-content: center;
-  align-items: center;
-  height: auto;
-  flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: auto;
+	flex-direction: column;
+	font-family: 'Arial', sans-serif;
+    color: #333;
+    margin: 0 auto;
+    padding: 20px;
+    max-width: 800px;
 }
 .page h1 {
 	text-align: center;
@@ -61,7 +66,7 @@
   
 .inputs .input {
 	text-align: center;
-  }
+}
   
 .inputs .input input {
 	height: 30px;
@@ -93,73 +98,73 @@
 
 /* Style the dropdown button */
 .dropbtn {
-    background-color: #000000;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+	background-color: #000000;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
 }
 
 /* Style the dropdown content (hidden by default) */
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #000000;
-    min-width: 160px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    z-index: 1;
+	display: none;
+	position: absolute;
+	background-color: #000000;
+	min-width: 160px;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+	z-index: 1;
 }
 
 /* Style the links inside the dropdown */
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
 }
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-    background-color: #656565;
+	background-color: #656565;
 }
 
 /* Show the dropdown menu when hovering over the dropdown button */
 .dropdown:hover .dropdown-content {
-    display: block;
+	display: block;
 }
 
 /* Change the background color of the dropdown button when hovering */
 .dropdown:hover .dropbtn {
-    background-color: #656565;
+	background-color: #656565;
 }
 
 .request-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
 }
 
 .request-box {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
+	border: 1px solid #ccc;
+	padding: 10px;
+	margin-bottom: 10px;
+	display: flex;
+	align-items: center;
 }
 
 .request-text {
-    flex: 1;
+	flex: 1;
 }
 
 .button-container {
-    display: flex;
-    gap: 10px;
+	display: flex;
+	gap: 10px;
 }
 
 .button-container button {
-    padding: 8px 16px; /* Adjust padding for larger buttons */
-    font-size: 16px; /* Increase font size for larger buttons */
+	padding: 8px 16px; /* Adjust padding for larger buttons */
+	font-size: 16px; /* Increase font size for larger buttons */
 }
 
 .profile-summary {
